cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
	"crates/core",
	"crates/detours",
	"crates/emf",
	"crates/emf-types",
	"crates/emtk",
	"crates/xtask",
]
default-members = ["crates/emtk"]

[workspace.package]
# Update the version in the following files when changing the version number:
# - ./bindings/python/emtk-py/emtk/blender/blender_manifest.toml
# - ./crates/xtask/src/main.rs
version = "0.1.0-beta.3"
authors = ["Megumin <megumin@megu.dev>", "ProffDea <deatea@riseup.net>"]
edition = "2024"
documentation = "https://exanimamodding.codeberg.page/Book"
homepage = "https://exanimamodding.codeberg.page/Book"
repository = "https://codeberg.org/ExanimaModding/Toolkit"
license = "LGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0"
detours-sys = { path = "./crates/detours" }
emf-types = { path = "./crates/emf-types" }
image = { version = "0.25", default-features = false, features = [
	"ico",
	"png",
] }
open = "5.3"
ron = "0.8"
safer-ffi = { version = "0.1", default-features = false, features = [
	"alloc",
	"log",
] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.16"
thiserror = "2.0"
tokio = { version = "1", features = [
	"io-std",
	"fs",
	"io-util",
	"macros",
	"rt-multi-thread",
] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = "0.11.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
rustflags = ["-Zlocation-detail=none"]

[profile.release.package.emf]
opt-level = 3
