cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
	"crates/detours",
	"crates/xtask",
	"emtk_asset",
	"emtk_core",
	"emtk_framework",
	"emtk_framework_types",
	"emtk_launcher",
]
default-members = ["emtk_launcher"]

[workspace.package]
version = "0.1.0-dev"
authors = ["Megumin <megumin@megu.dev>", "ProffDea <deatea@riseup.net>"]
edition = "2024"
documentation = "https://exanimamodding.codeberg.page/Book"
homepage = "https://exanimamodding.codeberg.page/Book"
repository = "https://codeberg.org/ExanimaModding/Toolkit"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
detours-sys = { path = "./crates/detours" }
image = { version = "0.25", default-features = false, features = [
	"ico",
	"png",
] }
open = "5.3"
ron = "0.8"
safer-ffi = { version = "0.1", default-features = false, features = [
	"alloc",
	"log",
] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.16"
thiserror = "2.0"
tokio = { version = "1", features = [
	"io-std",
	"fs",
	"io-util",
	"macros",
	"rt-multi-thread",
] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = "0.11.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
rustflags = ["-Zlocation-detail=none"]

[profile.release.package.emtk_framework]
opt-level = 3
