[package]
edition = "2021"
name = "emf-ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
detours-sys = {workspace = true}
eframe = "0.24.1"
egui = "0.24.1"
egui_dock = "0.9.0"
egui_tiles = "0.4.0"
env_logger = {workspace = true}
gl = "0.14.0"
lock_api = "0.4"
once_cell = "1.13"
parking_lot = {version = "0.12", optional = true}
spin = {version = "0.9", optional = true, features = ["lock_api"]}
thiserror = "1.0"
windows = {version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_WindowsProgramming",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_OpenGL",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_SystemInformation",
  "Win32_System_Time",
  "Win32_Graphics_Gdi",
]}

[features]
clear = []
default = ["parking-lot"]
force-compile = []
no-msgs = []
parking-lot = ["dep:parking_lot"]
save-blob = []
spin-lock = ["dep:spin"]
