[package]
edition = "2021"
name = "emf"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
required-features = []

[dependencies]
# TODO: Remove this dependency - required by hudhook.
windows = { version = "0.51.0", features = ["Win32_Foundation"] }
hudhook = { version = "0.5.0", default-features = false, features = [
	"opengl3",
] }
libmem = { workspace = true }
mlua = { version = "0.9.2", features = ["luajit", "vendored", "macros"] }
detours-sys = { workspace = true }
dynasmrt = "2.0.0"
exe = "0.5.6"
lazy_static = "1.4.0"
pelite = "0.10.0"
serde = { workspace = true }
winapi = { workspace = true }
