[package]
edition = "2021"
name = "emf"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
required-features = []

[dependencies]
libmem = { workspace = true }
detours-sys = { workspace = true }
dynasmrt = "2.0.0"
exe = "0.5.6"
lazy_static = "1.4.0"
pelite = "0.10.0"
serde = { workspace = true }
winapi = { workspace = true }
