[package]
edition = "2021"
name = "emf"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
required-features = []

# To generate headers:
# cargo run -p emf --features headers --bin generate-headers

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[dependencies]
libmem = { workspace = true }
libmem-sys = { workspace = true }
detours-sys = { workspace = true }
dynasmrt = "2.0.0"
pelite = "0.10.0"
serde = { workspace = true }
winapi = { workspace = true }
libloading = "0.8.3"
anyhow = "1.0.86"
once_cell = "1.19.0"
emf-types = { path = "../emf-types" }
pretty_env_logger = "0.5.0"
log = "0.4.21"
safer-ffi = { version = "0.1.8", default-features = false, features = [
	"alloc",
	"log",
] }

[features]
headers = ["safer-ffi/headers"]
