[package]
name = "emtk_asset"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "emtk_asset"
crate-type = ["cdylib", "lib"]

[dependencies]
deku = "0.19"
serde = { version = "1.0", features = ["derive"] }
# Update the following files when modifying the features of pyo3:
# - ./bindings/python/emtk-py/emtk/blender/blender_manifest.toml
# - ./crates/xtask/src/main.rs
pyo3 = { version = "0.23", features = [
	"extension-module",
	"abi3-py311",
], optional = true }
pyo3-log = { version = "0.12", optional = true }
tracing = "0.1"

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-log"]

[[example]]
name = "rpk"

[[example]]
name = "rfi"
