[package]
name = "emtk_asset"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "emtk_asset"
crate-type = ["cdylib", "lib"]

[dependencies]
deku = "0.19"
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
