[package]
name = "emtk_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "emtk_core"

[dependencies]
anyhow.workspace = true
bon = "3.3"
dirs = "6.0"
getset = "0.1"
ron.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
