[package]
name = "emtk_framework"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
required-features = []

# To generate headers:
# cargo run -p emtk_framework --features headers --bin generate-headers

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[dependencies]
ansi_term = "0.12"
anyhow.workspace = true
detours-sys.workspace = true
emtk_core = { path = "../emtk_core" }
emtk_framework_types.workspace = true
emtk_asset = { path = "../emtk_asset" }
hudhook = { git = "https://github.com/veeenu/hudhook.git", rev = "4d8d8d09ee64ef25735fde84731745824341d506", features = [
	"opengl3",
	"imgui-docking",
	"imgui-tables-api",
], default-features = false }
image.workspace = true
libloading = "0.8"
libmem = { version = "5.0.4", default-features = false, features = ["static"] }
open.workspace = true
path-clean = "1.0"
pelite = "0.10"
safer-ffi.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing-tracy.workspace = true
winapi = { version = "0.3", features = [
	"minwindef",
	"winnt",
	"winbase",
	"errhandlingapi",
	"psapi",
	"consoleapi",
	"ntdef",
] }

[features]
headers = ["safer-ffi/headers"]

[build-dependencies]
flate2 = "1.1.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
tar = "0.4.44"
