[package]
name = "emtk_overlay"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bevy_app = { version = "0.16", optional = true }
bevy_derive = { version = "0.16", optional = true }
bevy_ecs = { version = "0.16", optional = true }
bevy_reflect = { version = "0.16", optional = true }
bevy_render = { version = "0.16", optional = true }
bevy_window = { version = "0.16", optional = true }
bevy_winit = { version = "0.16", optional = true }
crossbeam-channel = "0.5"
detours-sys.workspace = true
gl = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle.workspace = true
tracing.workspace = true
winapi.workspace = true
winit = { version = "0.30", default-features = false }

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2"

[features]
default = ["bevy"]
bevy = [
	"dep:bevy_app",
	"dep:bevy_derive",
	"dep:bevy_ecs",
	"dep:bevy_reflect",
	"dep:bevy_render",
	"dep:bevy_window",
	"dep:bevy_winit",
]
