[package]
name = "repacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.7.0"
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.29"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "0.8.6"
