[package]
name = "emcore"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "emcore"

[dependencies]
bon = "3.3"
dirs = "6.0"
exparser = { git = "https://codeberg.org/ExanimaModding/exparser.git" }
getset = "0.1"
ron = "0.8"
serde.workspace = true
sysinfo = { version = "0.34", default-features = false, features = ["system"] }
thiserror = "2.0"
tokio = { version = "1", features = ["io-std", "fs", "io-util", "macros"] }
toml.workspace = true
tracing = "0.1"
tracing-indicatif = "0.3"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3.16"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[[example]]
name = "testbed"

[[bench]]
name = "instance"
harness = false
