[package]
name = "emcore"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "emcore"

[dependencies]
bon = "3.3"
dirs = "6.0"
getset = "0.1"
itertools.workspace = true
ron = "0.8"
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile.workspace = true
tokio-test = "0.4"
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "testbed"

[[bench]]
name = "instance"
harness = false
