[package]
name = "emf-types"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
safer-ffi = { workspace = true }
