[package]
name = "emf"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
required-features = []

# To generate headers:
# cargo run -p emf --features headers --bin generate-headers

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[dependencies]
anyhow = "1.0.86"
detours-sys = { workspace = true }
emf-types = { workspace = true }
libloading = "0.8.3"
libmem = { git = "https://github.com/rdbo/libmem.git", rev = "91dd26a7557ee7a857741394e57d62ce5129ee98" }
log = { workspace = true }
once_cell = "1.19.0"
path-clean = "1.0.1"
pelite = "0.10.0"
pretty_env_logger = { workspace = true }
safer-ffi = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
winapi = { workspace = true }
hudhook = { git = "https://github.com/meguminsama/hudhook.git", branch = "feat/imgui-features", features = [
	"opengl3",
	"imgui-docking",
	"imgui-tables-api",
], default-features = false }
open = "5.3.0"
image = "0.25.2"

[features]
headers = ["safer-ffi/headers"]
