[package]
name = "emf"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
required-features = []

# To generate headers:
# cargo run -p emf --features headers --bin generate-headers

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[dependencies]
ansi_term = "0.12"
anyhow.workspace = true
detours-sys.workspace = true
emcore = { path = "../core" }
emf-types.workspace = true
hudhook = { git = "https://github.com/veeenu/hudhook.git", rev = "4d8d8d09ee64ef25735fde84731745824341d506", features = [
	"opengl3",
	"imgui-docking",
	"imgui-tables-api",
], default-features = false }
image.workspace = true
libloading = "0.8"
libmem = "5.0"
once_cell.workspace = true
open.workspace = true
path-clean = "1.0"
pelite = "0.10"
safer-ffi.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
winapi.workspace = true

[features]
headers = ["safer-ffi/headers"]
