[package]
name = "exparser"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
# This revision adds support for reading the bytes in a Vec<u8> all at once which does not have a release yet.
# Once a release including this revision is published, this can be changed to using versions.
deku = { git = "https://github.com/sharksforarms/deku.git", rev = "59fc7603e2eb2ac3e500927d98514f431d691481" }
log = { workspace = true }
serde = { workspace = true }
# Update the following files when modifying the features of pyo3:
# - ./bindings/python/emtk-py/emtk/blender/blender_manifest.toml
# - ./crates/xtask/src/main.rs
pyo3 = { version = "0.22.2", features = [
	"extension-module",
	"abi3-py311",
], optional = true }

[features]
default = []
python = ["dep:pyo3"]
