[package]
name = "repacker"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
bitstream-io = { workspace = true }
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.29"
log = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
thiserror = "1.0.50"
tokio = { version = "1", features = [
	"fs",
	"io-util",
	"macros",
	"rt-multi-thread",
] }
toml = { workspace = true }
