[package]
name = "godhand"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
dynasmrt = { workspace = true }
log = { workspace = true }
once_cell = "1.19.0"
pretty_env_logger = { workspace = true }
safer-ffi = { workspace = true }
