[package]
name = "godhand"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
emf-types.workspace = true
safer-ffi.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
