[package]
name = "emtk-py"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
name = "_internal_emtk_py"
crate-type = ["cdylib"]

[dependencies]
exparser = { path = "../../../crates/exparser", features = ["python"] }
pyo3-log = "0.11.0"
