[package]
name = "emf-rs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.86"
emf-rs-macros = { path = "../emf-rs-macros" }
emf-sys = { path = "../emf-sys" }
log = "0.4.22"
once_cell = "1.19.0"
safer-ffi = "0.1.9"
