[package]
name = "emf-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
emf-rs-macros = { path = "../emf-rs-macros" }
emf-sys = { path = "../emf-sys" }
safer-ffi.workspace = true
tracing.workspace = true
