[package]
name = "emf-sys"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
emf-types = { workspace = true }
safer-ffi = "0.1.9"

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
ureq = { version = "2.10.0", features = ["json"] }
zip = "2.1.5"
