[package]
name = "emf-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
emf-types.workspace = true
safer-ffi.workspace = true

[build-dependencies]
serde.workspace = true
serde_json = "1.0"
ureq = { version = "2.10", features = ["json"] }
zip = "2.1"
